additional pages added

--- a/styles/style.css
+++ b/styles/style.css
@@ -133,12 +133,12 @@ body {
 }
 
 .img2 {
-  background-image: url("../assets/rohitsmoking.PNG");
+  background-image: url("../assets/pulkitpic1.jpg");
   min-height: 100%;
 }
 
 .img3 {
-  background-image: url("../assets/streetlight.jpg");
+  background-image: url("../assets/pulkitpic2.jpg");
   min-height: 100%;
 }
 
