--- a/styles/style.css
+++ b/styles/style.css
@@ -133,7 +133,7 @@ body {
 }
 
 .img2 {
-  background-image: url("../assets/pulkitpic1.jpg");
+  background-image: url("../assets/pulkitTemplate1.jpg");
   min-height: 100%;
 }
 
