MObile check final

--- a/styles/style.css
+++ b/styles/style.css
@@ -138,7 +138,7 @@ body {
 }
 
 .img3 {
-  background-image: url("../assets/pulkitpic2.jpg");
+  background-image: url("../assets/May.jpg");
   min-height: 100%;
 }
 
