--- a/styles/style.css
+++ b/styles/style.css
@@ -115,7 +115,7 @@ body {
   color: white;
 }
 
-.img1, .img2, .img3, .img4, .img5 {
+.img1, .img2, .img3, .img4, .img5, .img6, .img7, .img8, .img9, .img10, .img12, .img13 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -147,6 +147,38 @@ body {
   min-height: 100%;
 }
 .img5 {
+  background-image: url("../assets/july.jpg");
+  min-height: 100%;
+}
+.img6 {
+  background-image: url("../assets/August.jpg");
+  min-height: 100%;
+}
+.img7 {
+  background-image: url("../assets/September.jpg");
+  min-height: 100%;
+}
+.img8 {
+  background-image: url("../assets/October.jpg");
+  min-height: 100%;
+}
+.img9 {
+  background-image: url("../assets/july.jpg");
+  min-height: 100%;
+}
+.img10 {
+  background-image: url("../assets/july.jpg");
+  min-height: 100%;
+}
+.img11 {
+  background-image: url("../assets/july.jpg");
+  min-height: 100%;
+}
+.img12 {
+  background-image: url("../assets/july.jpg");
+  min-height: 100%;
+}
+.img13 {
   background-image: url("../assets/july.jpg");
   min-height: 100%;
 }
