--- a/styles/style.css
+++ b/styles/style.css
@@ -179,7 +179,7 @@ body {
   min-height: 100%;
 }
 .img13 {
-  background-image: url("../assets/PulkitMarch.jpg");
+  background-image: url("../assets/March.jpg");
   min-height: 100%;
 }
 .w3-wide {
